objects/Trigger_Detail__c.object
<CustomObject>
    <description>Specific Classes/Logic executed for triggers</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Filters__c</fullName>
        <description>Determines how the Change Filters should be evaluated. 

If &quot;Any Change Filters&quot; is selected and you have 4 fields being evaluated, if any of those fields changed then the trigger will fire.

If &quot;All Change Filters&quot; is selected and you have 4 fields being evaluated, ALL of those fields must have changed for the trigger to fire.</description>
        <inlineHelpText>&quot;Any Change Filters&quot; : If multiple change filters listed, only one must evaluate to true to fire trigger
&quot;All Change Filters&quot; : If multiple change filters listed, all must evaluate to true to fire trigger</inlineHelpText>
        <label>Change Filters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any Change Filters</fullName>
                    <default>true</default>
                    <label>Any Change Filters</label>
                </value>
                <value>
                    <fullName>All Change Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Detailed breakdown about how the trigger works and why it was created</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Field Filter - Name of the field to filter on</description>
        <inlineHelpText>Name of the field to filter on</inlineHelpText>
        <label>Field Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>Filter - Value to check for</description>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Blank_Initial_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a field had its value changed from nothing to something, then do not consider that to be a &quot;change&quot; for the filter.</description>
        <inlineHelpText>If a field had its value changed from nothing to something, then do not consider that to be a &quot;change&quot; for the filter. If this is unchecked, going from nothing to something would count as a change. 

This includes null values and empty string values.</inlineHelpText>
        <label>Ignore Blank Initial Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_Blank_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a field had its value changed from something to nothing, then do not consider that to be a &quot;change&quot; for the filter.</description>
        <inlineHelpText>If a field had its value changed from something to nothing, then do not consider that to be a &quot;change&quot; for the filter. If this is unchecked, going from something to nothing would count as a change.

This includes null values and empty string values.</inlineHelpText>
        <label>Ignore Blank Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Account_Set_Up__c</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Cash_Recycler__c</fullName>
                </value>
                <value>
                    <fullName>com_Object_Category__c</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>ContentVersion</fullName>
                </value>
                <value>
                    <fullName>Dispatch_History__c</fullName>
                </value>
                <value>
                    <fullName>EmailMessage</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>LineItemPart__c</fullName>
                </value>
                <value>
                    <fullName>MLR_Management__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Schedule_Entry__c</fullName>
                </value>
                <value>
                    <fullName>Service_Request_Line_Item__c</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
                <value>
                    <fullName>WorkOrderLineItem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Trigger</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trigger</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Trigger_Detail__c</referenceTo>
        <relationshipName>Trigger_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Users_List__c</fullName>
        <description>Comma-separated list of users to run this trigger for, even if it is marked as inactive</description>
        <inlineHelpText>Comma-separated list of users to run this trigger for, even if it is marked as inactive</inlineHelpText>
        <label>Run Users List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Order of Execution</description>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skip_Users_List__c</fullName>
        <description>Comma-separated list of users to skip running this trigger for</description>
        <inlineHelpText>Comma-separated list of users to skip running this trigger for</inlineHelpText>
        <label>Skip Users List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAfterInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAfterUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBeforeDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBeforeInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBeforeUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Configuration</label>
    <listViews>
        <fullName>Account_Setup_Triggers</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account_Set_Up__c</value>
        </filters>
        <label>Account Setup Triggers</label>
    </listViews>
    <listViews>
        <fullName>Account_Triggers</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account Triggers</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Case_Triggers</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <label>Case Triggers</label>
    </listViews>
    <listViews>
        <fullName>Contact_Triggers</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact Triggers</label>
    </listViews>
    <listViews>
        <fullName>DFHC</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Skip_Users_List__c</field>
            <operation>contains</operation>
            <value>0053600000D52rBAAR</value>
        </filters>
        <label>Disabled for Heroku Connect-User Control</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DFHI</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Skip_Users_List__c</field>
            <operation>contains</operation>
            <value>0053600000D60A3AAJ</value>
        </filters>
        <label>Disabled for Heroku Integrations-APIs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DFJ</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Skip_Users_List__c</field>
            <operation>contains</operation>
            <value>005360000012WANAA2</value>
        </filters>
        <label>Disabled for John</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DFTCI</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Skip_Users_List__c</field>
            <operation>contains</operation>
            <value>0053600000D609FAAR</value>
        </filters>
        <label>Disabled for Tire Care Integrations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DFV</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Skip_Users_List__c</field>
            <operation>contains</operation>
            <value>005360000036OeQAAU</value>
        </filters>
        <label>Disabled for Victor</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SRLI_Triggers</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Service_Request_Line_Item__c</value>
        </filters>
        <label>SRLI Triggers</label>
    </listViews>
    <listViews>
        <fullName>Work_Order_Triggers</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Sequence__c</columns>
        <columns>isBeforeInsert__c</columns>
        <columns>isAfterInsert__c</columns>
        <columns>isAfterUpdate__c</columns>
        <columns>isBeforeUpdate__c</columns>
        <columns>isBeforeDelete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Trigger_Detail__c.Trigger</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>WorkOrder</value>
        </filters>
        <label>Work Order Triggers</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Configuration</pluralLabel>
    <recordTypes>
        <fullName>Change_Filter</fullName>
        <active>true</active>
        <description>Filter that monitors if a specific field has had its value changed</description>
        <label>Change Filter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Field_Filter</fullName>
        <active>true</active>
        <description>Field filter for triggers</description>
        <label>Field Filter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type_Filter</fullName>
        <active>true</active>
        <description>Filter on record type for triggers</description>
        <label>Record Type Filter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trigger</fullName>
        <active>true</active>
        <description>Trigger</description>
        <label>Trigger</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>